--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
 			</a>
 		</div>
 		<p>Impressions tous formats <span>en boutique et en ligne</span></p>
-		<div class="dots">
-		</div>
+		<div class="dots"></div>
 	</div>
 	<section id="about-us" class="container">
 		<div>
